[package]
name = "order-book"
version = "0.1.0"
edition = "2021"
authors = ["Fanghao Yang"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-contract = "1.0.2"
ethers = { version = "1.0.2", features = ["eip712"] }
ethers-derive-eip712 = "1.0.2"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
num-bigint = { version = "0.4.3", features = ["rand"] }